--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" href="https://avatars.githubusercontent.com/u/96995340" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,7 +39,7 @@
         <div class="head">
             <section class="section-hero">
                 <div class="hero" id="hero" data-aos="fade-left">
-                    <img src="img/photo.png" alt="snehasis-ghosh">
+                    <img src="https://avatars.githubusercontent.com/u/96995340" alt="snehasis-ghosh">
                 </div>
                 <div class="info" data-aos="fade-right">
 
@@ -66,10 +67,7 @@
         <div class="about" id="about">
             <h1 data-aos="fade-left">About</h1>
             <div class="space"></div>
-            <h3 data-aos="fade-in">Hi I’m Snehasis Ghosh a coding enthusiast and undergraduate IT student . I am eager
-                to take on new
-                challenges and gain hands-on experience through freelancing opportunities. I am excited to apply my
-                skills and knowledge to real-world projects and continue to grow as a professional.</h3>
+            <h3 data-aos="fade-in">Hi I'm Snehasis Ghosh, a freelance web developer and app developer from India. Currently i make online tutorials for beginners. And work on some part time project, sadly i dont do any full time jobs.</h3>
         </div>
         <!-- SKILLS SECTION  -->
         <div class="skill-section" id="skills">
@@ -107,7 +105,7 @@
     <!-- FOOTER SECTION  -->
 
     <div class="footer">
-        <h3>Made with ❤️ by Snehasis </h3>
+        <h3>Made with ❤️ by Snehasis</h3>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
