--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                                 <h3>Github</h3>
                             </div>
                     </a>
-                    <a href="https://www.linkedin.com/in/snehasis-ghosh-82756a1b4" target="_blank">
-                        <div class="linkedin">
-                            <i class="fa-brands fa-linkedin fa-2x"></i>
-                            <h3>LinkedIn</h3>
+                    <a href="https://www.youtube.com/@Snehasis4321" target="_blank">
+                        <div class="youtube">
+                            <i class="fa-brands fa-youtube fa-2x"></i>
+                            <h3>Youtube</h3>
                         </div>
                     </a>
                 </div>
@@ -88,7 +88,7 @@
         <!-- CONTACT SECTION  -->
         <div class="contact-section">
             <h1 data-aos="fade-down">Contact</h1>
-            <div class="space"></div>
+            <!-- <div class="space"></div> -->
             <div class="contact" id="contact" data-aos="fade-down">
                 <form action="https://formsubmit.co/053a14a9e4bd99724b5275722e215d4e" method="POST">
                     <input type="text" name="name" id="name" placeholder="Name : " required><br>
