--- a/index.html
+++ b/index.html
@@ -100,8 +100,12 @@
             <div class="contact" id="contact" data-aos="fade-down">
                 <form action="https://formsubmit.co/053a14a9e4bd99724b5275722e215d4e" method="POST" class="contact-form">
                     <input type="hidden" name="_subject" value="New Portfolio Contact">
-                    <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_captcha" value="true">
                     <input type="hidden" name="_next" value="#contact">
+                    <input type="hidden" name="_blacklist" value="reverse,shell,script.google.com,eval(,exec(,<script,javascript:,onclick=,">
+                    <input type="hidden" name="_cc" value="">
+                    <input type="text" name="_honey" style="display:none">
+                    <input type="hidden" name="_template" value="table">
                     
                     <div class="form-group">
                         <label for="name" class="sr-only">Name</label>
@@ -136,6 +140,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="app.js"></script>
+    <script src="spam-filter.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init({
