success for mail

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <form action="https://formsubmit.co/053a14a9e4bd99724b5275722e215d4e" method="POST" class="contact-form">
                     <input type="hidden" name="_subject" value="New Portfolio Contact">
                     <input type="hidden" name="_captcha" value="true">
-                    <input type="hidden" name="_next" value="#contact">
+                    <input type="hidden" name="_next" value="https://snehasis4321.github.io/Simple-Portfolio/#contact?success=true">
                     <input type="hidden" name="_blacklist" value="reverse,shell,script.google.com,eval(,exec(,<script,javascript:,onclick=,">
                     <input type="hidden" name="_cc" value="">
                     <input type="text" name="_honey" style="display:none">
