dark mode and some new

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
-<body>
+<body class="page-load">
+    <!-- Scroll Progress Indicator -->
+    <div class="scroll-progress" id="scroll-progress"></div>
+
+    <!-- Toast Notification Container -->
+    <div id="toast-container" class="toast-container"></div>
+
     <header class="header">
         <h1>Portfolio</h1>
 
@@ -35,6 +41,11 @@
                 <li><a class='navbar-link' href="#contact">Contact</a></li>
             </ul>
         </nav>
+
+        <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
+            <i class="fa-solid fa-moon" id="theme-icon"></i>
+        </button>
+
         <div class="mobile-navbar-btn">
             <ion-icon class="mobile-nav-icon" name="menu-outline"></ion-icon><ion-icon class="mobile-nav-icon"
                 name="close-outline"></ion-icon>
@@ -51,7 +62,10 @@
                 </div>
                 <div class="info" data-aos="fade-right">
                     <h1>Snehasis Ghosh</h1>
-                    <p class="tagline">Full Stack Web Developer, Mobile App Developer & UI/UX Designer</p>
+                    <p class="tagline">
+                        <span id="typing-text"></span>
+                        <span class="typing-cursor">|</span>
+                    </p>
                     <p class="intro">Passionate about creating innovative digital solutions and helping beginners learn through online tutorials.</p>
                     <a href="https://github.com/Snehasis4321" target="_blank">
                         <div class="socials">
@@ -136,6 +150,11 @@
     <div class="footer">
         <h3>Made with ❤️ by Snehasis</h3>
     </div>
+
+    <!-- Back to Top Button -->
+    <button id="back-to-top" class="back-to-top" aria-label="Back to top">
+        <i class="fa-solid fa-arrow-up"></i>
+    </button>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
