--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <li><a class='navbar-link' href="#hero">Home</a></li>
                 <li><a class='navbar-link' href="#about">About</a></li>
                 <li><a class='navbar-link' href="#skills">Skills</a></li>
+                <li><a class='navbar-link' href="#certifications">Certifications</a></li>
                 <li><a class='navbar-link' href="#projects">Projects</a></li>
                 <li><a class='navbar-link' href="#contact">Contact</a></li>
             </ul>
@@ -98,6 +99,13 @@
             <div class="skills-container">
             </div>
             <div class="more-skills">View More </div>
+        </div>
+        <!-- CERTIFICATIONS SECTION  -->
+        <div class="certifications-section" id="certifications">
+            <h1 data-aos="fade-right">Certifications</h1>
+            <div class="space"></div>
+            <div class="certifications-container">
+            </div>
         </div>
         <!-- PROJECTS SECTION  -->
         <div class="projects-section" id="projects">
