add real clients

--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
                         <p>"Snehasis delivered an exceptional web application that exceeded our expectations. His attention to detail and technical expertise made the entire process smooth and efficient."</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' viewBox='0 0 60 60'%3E%3Ccircle cx='30' cy='30' r='30' fill='%23e0e0e0'/%3E%3Ctext x='30' y='35' text-anchor='middle' font-size='20' fill='%23666'%3EAJ%3C/text%3E%3C/svg%3E" alt="Client 1">
+                        <img src="clients/uk-client.png" alt="UK Client ">
                         <div class="author-info">
-                            <h4>Alex Johnson</h4>
-                            <span>CEO, TechStart Inc.</span>
+                            <h4>Michael Brown</h4>
+                            <span>CEO, Pumpkin Labs Inc.</span>
                         </div>
                     </div>
                 </div>
@@ -201,10 +201,10 @@
                         <p>"Working with Snehasis was a fantastic experience. His mobile app development skills are top-notch, and he consistently delivered high-quality code on time."</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' viewBox='0 0 60 60'%3E%3Ccircle cx='30' cy='30' r='30' fill='%23e0e0e0'/%3E%3Ctext x='30' y='35' text-anchor='middle' font-size='20' fill='%23666'%3ESC%3C/text%3E%3C/svg%3E" alt="Client 2">
+                        <img src="clients/au-client.png" alt="Australian Client">
                         <div class="author-info">
-                            <h4>Sarah Chen</h4>
-                            <span>Product Manager, InnovateLabs</span>
+                            <h4>Marie Clarke</h4>
+                            <span>Product Manager, Innovate Labs</span>
                         </div>
                     </div>
                 </div>
@@ -214,10 +214,10 @@
                         <p>"Snehasis's tutorial content has been invaluable for our team. His ability to explain complex concepts in simple terms is remarkable."</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' viewBox='0 0 60 60'%3E%3Ccircle cx='30' cy='30' r='30' fill='%23e0e0e0'/%3E%3Ctext x='30' y='35' text-anchor='middle' font-size='20' fill='%23666'%3EMB%3C/text%3E%3C/svg%3E" alt="Client 3">
+                        <img src="clients/in-client.png" alt="Indian Client">
                         <div class="author-info">
-                            <h4>Michael Brown</h4>
-                            <span>CTO, Digital Solutions</span>
+                            <h4>Umesh Patel</h4>
+                            <span>Senior Developer, Talent Networks</span>
                         </div>
                     </div>
                 </div>
